--- a/todolist.html
+++ b/todolist.html
@@ -5,16 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TO DO LIST</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+      integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+      integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+      crossorigin="anonymous"
+    ></script>
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body
     style="
@@ -25,7 +37,7 @@
   >
     <!-- navbar start -->
     <nav
-      class="navbar sticky-top navbar-expand-lg navbar-light text-dark jumpover"
+      class="navbar sticky-top navbar-expand-lg navbar-light"
       style="
         background: rgb(244, 242, 242);
         background: rgba(244, 242, 242, 0.5);
@@ -36,49 +48,38 @@
           class="navbar-toggler"
           type="button"
           data-bs-toggle="collapse"
-          data-bs-target="#navbarScroll"
-          aria-controls="navbarScroll"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarScroll">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
               <h2>To Do List</h2>
             </li>
           </ul>
           <ul class="navbar-nav d-flex">
-            <!-- <a
+            <li class="nav-item">
+              <a
                 class="nav-link"
-                href=""
-                style="font-size: x-large; font-weight: 400"
-                onclick="populate()"
-                >My to-do list</a
-              > -->
-            <button
-              class="btn btn-outline-dark"
-              onclick="populate();"
-              type="button"
-              style="margin-right: 10px"
-            >
-              My to-do list
-            </button>
-
-            <!-- <a
+                href="#"
+                onclick="populate();"
+                style="font-size: large; font-weight: 500; padding-right: 30px"
+                >My To-Do List</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
                 class="nav-link"
-                href="index.html"
-                style="font-size: x-large; font-weight: 400"
+                href="#"
+                onclick="logout()"
+                style="font-size: large; font-weight: 500"
                 >Logout</a
-              > -->
-            <button
-              class="btn btn-outline-dark"
-              type="button"
-              onclick="logout()"
-            >
-              Logout
-            </button>
+              >
+            </li>
           </ul>
         </div>
       </div>
